--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -2,5 +2,16 @@
 @import "common";
 
 body {
-  background: #ccc;
+    color: #fff;
+}
+
+.background {
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: fixed;
+    background: #04243b url("/img/login/login_bg.png") no-repeat center center fixed;
+    background-size: cover;
+    z-index: -1;
 }
