--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -17,7 +17,6 @@
     //border: 1px solid darken($color-main-dark, 20%);
     //box-shadow: 0px 1px 15px 2px darken($color-main-dark, 20%);
     
-    
     .navbar-header {
         float: left;
 
@@ -25,7 +24,12 @@
             display: inline-block;
             margin: 12px 5px;
             text-decoration: none;
+            color: #ccc;
         }
+    }
+
+    .nav a {
+        color: $color-main;
     }
 }
 
@@ -46,6 +50,7 @@
         }
 
         /* underline */
+        /*
         &.active {
             &:after {
                 content:" ";
@@ -57,24 +62,25 @@
                 position: absolute;
             }
         }
+        */
     }
 }
 
 .main {
-    margin-top: 50px;
+    margin-top: 42px;
 }
 
 
 .footer {
-    background: #082636;
-    color: #486473;
+    /* background: #fff; */
+    color: #3F5B6A;
     text-align: center;
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 40px;
-    line-height: 40px;
+    height: 30px;
+    line-height: 30px;
     font-size: 12px;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
 
