--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,14 +1,13 @@
 
 // Font
 $font-family: Helvetica, Tahoma, Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei", STXihei, STHeiti, Heiti, SimSun, sans-serif;
-$font-size: 14px;
+$font-size: 12px;
 
 
 // Layout
 $container-max-width: 100%;
-
+$container-width: 95%;
 
 // Color
 $color-main: #1F9FC5;
-
 
