--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -1,5 +1,10 @@
 
 @import "~normalize.css";
+
+//$fa-font-path: "~font-awesome/fonts";
+//@import "~font-awesome/scss/font-awesome.scss";
+@import "~font-awesome/css/font-awesome.css";
+
 @import "variables";
 @import "utils";
 @import "mixin";
