--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -6,12 +6,29 @@ body {
 }
 
 .background {
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: fixed;
     background: #04243b url("/img/login/login_bg.png") no-repeat center center fixed;
-    background-size: cover;
-    z-index: -1;
+    /* background-size: cover; */
+}
+
+.header {
+    font-size: 16px;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    width: 100%;
+}
+
+.login-panel {
+    
+    .title {
+        font-size: 16px;
+    }
+
+    .seperator {
+        background: url("/img/login/line.png") no-repeat 0 0;
+        width: 523px;
+        height: 5px;
+    }
+
+    
 }
