--- a/src/styles/bus_overview.scss
+++ b/src/styles/bus_overview.scss
@@ -1,6 +1,38 @@
 
 @import "common";
 
+/* Variables */
+$left-pannel-width: 120px;
+
+
 body {
     background: #082737;
+}
+
+.main {
+    margin-top: 20px;
+}
+
+.main-content {
+    background: rgba(3,19,27,.7);
+    min-height: 500px;
+    border-radius: 5px;
+    padding: 15px;
+}
+
+.left-panel {
+    
+}
+
+.bus-list {
+    background: #041E2C;
+    width: 100%;
+    min-height: 500px;
+    margin: 0 3px 0 0;
+    float: left;
+}
+
+.bus-info {
+    border: 1px solid #123F47;
+    height: 100px;
 }
