--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -1,2 +1,31 @@
 
 @import "common";
+
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+#allmap {
+    width: 100%;
+    height: 100%;
+}
+
+.sidebar {
+    width: 260px;
+    height: 240px;
+    position: fixed;
+    top: 24px;
+    right: 24px;
+    border: 1px #08415e solid ;
+    box-shadow: 0 0 0 3px #4c84cc; 
+    opacity: 0.6;
+    z-index: 99;
+}
+
+.sidebar ul li {
+    list-style-type: none;
+}
+
