--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -6,26 +6,61 @@
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 1;
 }
 
 #allmap {
     width: 100%;
     height: 100%;
+    margin-top: 40px;
 }
 
 .sidebar {
     width: 260px;
-    height: 240px;
+    height: 260px;
+    overflow: hidden;
     position: fixed;
-    top: 24px;
-    right: 24px;
-    border: 1px #08415e solid ;
-    box-shadow: 0 0 0 3px #4c84cc; 
-    opacity: 0.6;
-    z-index: 99;
+    top: 55px;
+    right: 15px;
+    background-color: #08415e;
+    opacity: 0.8;
+    box-shadow: 0 0 50px black;
+    border-radius:10px;
+    padding: 20px 10px;
+
 }
 
-.sidebar ul li {
-    list-style-type: none;
+.sidebar ul {
+    margin: 0;
+
+    li{
+        list-style-type: none;
+        line-height: 28px;
+        height:28px;
+        vertical-align: middle ;
+    }
+
+    li img {
+        margin-bottom: -2px;
+    }
+
+    li.normal{
+        color: #00fff6;
+    }
+
+    li.warn{
+        color: orangered;
+    }
+
+    li.error{
+        color: red;
+    }
+
+    li.dead{
+        color: gray;
+    }
+
 }
+
+
 
