--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -15,52 +15,61 @@
     margin-top: 40px;
 }
 
-.sidebar {
-    width: 260px;
-    height: 260px;
-    overflow: hidden;
-    position: fixed;
-    top: 55px;
-    right: 15px;
-    background-color: #08415e;
-    opacity: 0.8;
-    box-shadow: 0 0 50px black;
-    border-radius:10px;
-    padding: 20px 10px;
+.table {
 
-}
+    font-size: 12px;
+    width: 100%;
 
-.sidebar ul {
-    margin: 0;
-
-    li{
-        list-style-type: none;
-        line-height: 28px;
-        height:28px;
-        vertical-align: middle ;
+    thead th {
+        padding:5px 10px;
+        color: #fff;
+        font-weight: normal;
+        border:1px solid #00B2FB;
+        background-color: #1083BC;
+        height:20px;
     }
+        
+    tbody {
+        tr.normal {
+            color: #00fff6;
+        }
+        tr.error {
+            color: red;
+        }
+        tr.warn {
+            color: orangered;
+        }
+        tr.dead {
+            color: gray;
+        }
 
-    li img {
-        margin-bottom: -2px;
-    }
-
-    li.normal{
-        color: #00fff6;
-    }
-
-    li.warn{
-        color: orangered;
-    }
-
-    li.error{
-        color: red;
-    }
-
-    li.dead{
-        color: gray;
+        td {
+            padding:5px 10px;
+            border:1px solid #0a4861;
+            background-color: #022f46;
+            img {
+                margin-bottom: -2px;
+                pargin-right: 10px;
+            }
+        }
     }
 
 }
 
 
+.infoBox {
+    width: 240px;
+    padding: 5px 20px;
+    border: 1px solid #00B2FB;
+    border-radius: 15px;
+    background: rgba(8,83,120,0.8);
+    box-shadow: 0 0 50px rgb(8,83,120);
 
+    .items{
+        list-style: none;
+        padding: 0;
+        .item-content{
+            color: #00fff6;
+        }
+    }
+}
