--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -7,7 +7,7 @@ body {
 
 .background {
     background: #04243b url("/img/login/login_bg.png") no-repeat center center fixed;
-    /* background-size: cover; */
+     background-size: cover;
 }
 
 .header {
@@ -19,15 +19,61 @@ body {
 }
 
 .login-panel {
-    
+    margin: 12% 0 0 46%;
     .title {
-        font-size: 16px;
+      font-size: 20px;
+      font-weight: 400;
+      margin-left: 206px;
     }
-
+    .line-left {
+      margin-left: -50px;
+    }
+    .line-right{
+      margin-left: 108px;
+    }
+    .login-form{
+      line-height: 42px;
+    }
+    .from-input {
+         margin-left: 134px;
+         line-height: 8;
+         margin-top: 18px;
+         .input-style {
+           height: 36px;
+           width: 230px;
+           background-color: #0478b6;
+           border: solid 1px #4cb0d6;
+           ::-webkit-input-placeholder{
+             color: #fff ;
+           }
+         }
+    }
     .seperator {
         background: url("/img/login/line.png") no-repeat 0 0;
         width: 523px;
         height: 5px;
+    }
+    .button{
+      margin-left: 178px;
+      margin-top: 18px;
+      .login-text{
+        margin-left: 62px;
+      }
+    }
+  .username{
+    background: url("/img/login/username.png") no-repeat 0 0;
+    width: 18px;
+    height: 18px;
+  }
+  .password{
+    background: url("/img/login/password.png") no-repeat 0 0;
+    width: 17px;
+    height: 21px;
+  }
+    .login-btn{
+        background: url("/img/login/login_btn_bg.png") no-repeat 0 0;
+        width: 154px;
+        height: 36px;
     }
 
     
