--- a/src/styles/bus_overview.scss
+++ b/src/styles/bus_overview.scss
@@ -57,6 +57,10 @@ body {
 }
 
 .graph-container {
-    width: 400px;
+    //width: 400px;
     height: 250px;
+}
+
+.footer {
+    position: relative;
 }
