--- a/src/js/containers/BusGroupTree/bus_group_tree.scss
+++ b/src/js/containers/BusGroupTree/bus_group_tree.scss
@@ -51,7 +51,7 @@
     color: gray;
   }
   .orange_elem{
-    color: orangered;
+    color: orange;
   }
   .green-elem{
     color: green;
@@ -71,22 +71,26 @@
     list-style-type:none;
     font-size: 12px;
     background-color: $li_bg_color;
+    line-height: 32px;
   }
   i{
     display:inline-block;
     margin-right: 10px;
     margin-bottom: -3px;
   }
+  .title-mark i{
+    margin-right: 2px;
+    margin-top: 1px;
+  }
   .with-bottom{
-    background-color: $li_bg_color;
     border-bottom: solid #06395f 1px;
   }
   .clicked-li{
     background-color: #01273e;
     opacity:0.54;filter:alpha(opacity=54);
   }
-  .angel i{
-    margin-left: 11px;
+  .i-title{
+    margin-right: 40px;
     margin-top: 8px;
   }
   .hide-element{
@@ -94,5 +98,6 @@
   }
   .show-element{
       display: block;
+      padding: 0;
   }
 }
