--- a/src/js/components/Tab/styles.scss
+++ b/src/js/components/Tab/styles.scss
@@ -48,6 +48,7 @@
             line-height: 22px;
             background: url("img/tab1_inactive.png") no-repeat 0 0;
             text-align: center;
+            cursor: pointer;
 
             &.ReactTabs__Tab--selected {
                 background: url("img/tab1_active.png") no-repeat 0 0;
@@ -88,6 +89,7 @@
             line-height: 24px;
             min-width: 60px;
             text-align: center;
+            cursor: pointer;
             border: 1px solid #22ACD2;
             border-top-left-radius: 2px;
             border-top-right-radius: 2px;
