--- a/src/styles/bus_overview.scss
+++ b/src/styles/bus_overview.scss
@@ -81,3 +81,67 @@ body {
     }
 }
 
+.realtime-data-container {
+    overflow: auto;
+}
+
+.realtime-data {
+    background: url("/img/bus_skeleton.png") no-repeat center center;
+    position: relative;
+    margin: 0 auto;
+    width: 1000px;
+    height: 500px;
+
+    .motor, .cooling, .hms, .bms, .h2_bottle {
+        border: 1px solid #479DC2;
+        position: absolute;
+        height: 120px;
+        width: 100px;
+        border-radius: 2px;
+        left: 50%;
+        top: 50%;
+        overflow: hidden;
+    }
+
+    .motor {
+        margin-left: -460px;
+        margin-top: -50px;
+        height: 95px;
+    }
+    .cooling {
+        margin-left: -127px;
+        margin-top: -215px;
+        height: 95px;
+    }
+    .hms {
+        margin-left: 70px;
+        margin-top: -215px;
+    }
+    .bms {
+        margin-left: 130px;
+        margin-top: 134px;
+        height: 100px;
+    }
+    .h2_bottle {
+        margin-left: 354px;
+        margin-top: -95px;
+        width: 230px;
+        height: 190px;
+    }
+
+    .info-box {
+        margin: 10px;
+
+        h1 {
+            margin: 0 0 5px;
+            padding: 0;
+            font-size: 12px;
+        }
+
+        ul, li {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+    }
+}
