--- a/src/js/containers/BusGroupTree/bus_group_tree.scss
+++ b/src/js/containers/BusGroupTree/bus_group_tree.scss
@@ -71,16 +71,18 @@
     list-style-type:none;
     font-size: 12px;
     background-color: $li_bg_color;
-    line-height: 32px;
+    line-height: 38px;
   }
   i{
     display:inline-block;
     margin-right: 10px;
     margin-bottom: -3px;
+    margin-left: 18px;
   }
-  .title-mark i{
-    margin-right: 2px;
-    margin-top: 1px;
+  #title-mark{
+    margin-right: -10px;
+    margin-top: 18px;
+    position: fixed;
   }
   .with-bottom{
     border-bottom: solid #06395f 1px;
