--- a/src/js/containers/BusGroupTree/index.scss
+++ b/src/js/containers/BusGroupTree/index.scss
@@ -82,7 +82,7 @@
   #title-mark{
     margin-right: -10px;
     margin-top: 18px;
-    position: fixed;
+    position: absolute;
   }
   .with-bottom{
     border-bottom: solid #06395f 1px;
