--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -6,7 +6,7 @@ body {
 }
 
 .background {
-    background: #04243b url("/img/login/login_bg.png") no-repeat center center fixed;
+    background: #04243b url("../img/login/login_bg.png") no-repeat center center fixed;
      background-size: cover;
 }
 
@@ -35,21 +35,25 @@ body {
       line-height: 42px;
     }
     .from-input {
-         margin-left: 134px;
+         margin-left: 156px;
          line-height: 8;
          margin-top: 18px;
          .input-style {
            height: 36px;
-           width: 230px;
+           width: 200px;
+           border: 0;
+           font-size: 16px;
+           border-left: solid 1px #4cb0d6;
            background-color: #0478b6;
-           border: solid 1px #4cb0d6;
+           margin-left: 30px;
            ::-webkit-input-placeholder{
-             color: #fff ;
+             color: #fff;
            }
+           padding-left: 6px;
          }
     }
     .seperator {
-        background: url("/img/login/line.png") no-repeat 0 0;
+        background: url("../img/login/line.png") no-repeat 0 0;
         width: 523px;
         height: 5px;
     }
@@ -61,20 +65,35 @@ body {
       }
     }
   .username{
-    background: url("/img/login/username.png") no-repeat 0 0;
+    background: url("../img/login/username.png") no-repeat 0 0;
     width: 18px;
     height: 18px;
   }
   .password{
-    background: url("/img/login/password.png") no-repeat 0 0;
+    background: url("../img/login/password.png") no-repeat 0 0;
     width: 17px;
     height: 21px;
   }
     .login-btn{
-        background: url("/img/login/login_btn_bg.png") no-repeat 0 0;
+        background: url("../img/login/login_btn_bg.png") no-repeat 0 0;
         width: 154px;
         height: 36px;
     }
-
-    
+  .input-box{
+    height: 36px;
+    width: 230px;
+    border: solid 1px #4cb0d6;
+    background-color: #0478b6;
+    ::-webkit-input-placeholder{
+      color: #fff ;
+    }
+  }
+  .mark{
+    margin-top: 8px;
+    position: fixed;
+    margin-left: 5px;
+  }
+    i{
+      display: inline-block;
+    }
 }
